--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
 <!------------------------------------End of Nav---------------------------------->
     
 <section class="contact-container">
-    <div class="contact-box"><iframe width="560" height="315" src="https://www.youtube.com/embed/5yWOLxiniYo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-    <div class="contact-box"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.560081163775!2d-119.78451913522252!3d36.73312527917318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise+Industries!5e0!3m2!1sen!2sus!4v1564457609083!5m2!1sen!2sus" width="450" height="400" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+    <div class="contact-box"><iframe class="contact-content" width="560" height="315" src="https://www.youtube.com/embed/5yWOLxiniYo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div class="contact-box"><iframe class="contact-content" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.560081163775!2d-119.78451913522252!3d36.73312527917318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise+Industries!5e0!3m2!1sen!2sus!4v1564457609083!5m2!1sen!2sus" width="450" height="400" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 </section>
 
 <!------------------------------------------End of Section---------------------------->
