--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     <section class="container">
         <div class="box">
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium saepe, molestias voluptatibus veritatis vel recusandae eos libero laborum nemo? Inventore ad adipisci dolor cupiditate at fuga. Expedita consequatur et laudantium aperiam qui voluptatem voluptas quaerat blanditiis sit. Eveniet ducimus alias dolore tenetur, nihil, magni laudantium quo sit quae illum minima!
-            </p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium saepe, molestias voluptatibus veritatis vel recusandae eos libero laborum nemo? Inventore ad adipisci dolor cupiditate at fuga. Expedita consequatur et laudantium aperiam qui voluptatem voluptas quaerat blanditiis sit. Eveniet ducimus alias dolore tenetur, nihil, magni laudantium quo sit quae illum minima!</p>
         </div>
         <div class="box tacos-col">
             <a href="" class="herf https://tacosbaseball.com/"><img class="taco-img" src="img/ing/vegan tacos.jpg" alt="#"></a>
